--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "font-awesome": "^4.7.0",
     "moment": "^2.22.2",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1",
